# TreeBinding

./: .gitignore  .travis.yml  ArchiveSerializer.h  ArchiveSerializerDecl.h  CMakeLists.txt  JSON.h  PtreeWriter.h  README.md  TableParser.h  TreeBinding.cpp  TreeBinding.h  TreeBindingDecl.h  TreeBindingDefs.h  TreeBindingDetails.h  Xml.cpp  Xml.h  conan_install.sh  conanfile.txt  tk.txt
Details/: TreeBinding.cpp  TreeBindingDecl.h  TreeBindingDefs.h  TreeBindingDetails.h
Details/Parsers/: ArchiveSerializerDecl.h  TableParser.h
TreeBinding/: CMakeLists.txt  JSON.h  TreeBinding.h  XML.h
TreeBinding/Details/: ArchiveSerializer.h  ArchiveSerializerDecl.h  BasicNodeData.h  BasicTree.h  Empty.cpp  MacroUtils.h  Node.h  NodeData.h  NodeIterator.h  NodesNum.h  PtreeWriter.h  StringContainer.h  TableParser.h  Translator.h  Tree.h  TreeBinding.cpp  TreeBindingDecl.h  TreeBindingDefs.h  TreeBindingDetails.h
TreeBinding/Details/Core/: BasicNodeData.h  Exceptions.h  MacroUtils.h  Node.h  NodeData.h  NodesNum.h  StringContainer.h  Translator.h  Tree.h
TreeBinding/Details/Parsers/: ArchiveSerializer.h  PtreeWriter.h  TableParser.h
article/: article.txt  examples.txt  notes.h
cmake/: check_and_install_dependencies.cmake
drafts/: name_container.cpp
include/: CMakeLists.txt  JSON.h  TreeBinding.h  data_binding.h
include/creolisation/: CMakeLists.txt  JSON.h  XML.h  serializable_types.h
include/creolisation/details/: ArchiveSerializer.h  ArchiveSerializerDecl.h  PtreeWriter.h  TableParser.h
include/creolisation/details/Core/: BasicNodeData.h  BasicTree.h  Exceptions.h  MacroUtils.h  Node.h  NodeData.h  NodeIterator.h  NodesNum.h  StringContainer.h  Translator.h  Tree.h  TreeBindingDecl.h  dummy.cpp
include/creolization/: JSON.h  XML.h  serializable_types.h
include/creolization/details/: ArchiveSerializer.h  ArchiveSerializerDecl.h  PtreeWriter.h  TableParser.h
include/creolization/details/Core/: BasicNodeData.h  BasicTree.h  Converter.h  Exceptions.h  MacroUtils.h  Node.h  NodeData.h  NodeHolder.h  NodeIterator.h  NodesNum.h  StringContainer.h  Translator.h  Tree.h  TreeBindingDecl.h  dummy.cpp
include/details/: ArchiveSerializer.h  ArchiveSerializerDecl.h  PtreeWriter.h
include/details/Core/: BasicNodeData.h  Exceptions.h  Node.h  NodeData.h  NodeIterator.h  StringContainer.h  Translator.h  Tree.h  TreeBindingDecl.h
misc/single_header_generator/: CMakeLists.txt  file.cpp  file.h  file_formatter.cpp  files_provider.cpp  files_provider.h  files_structure.cpp  files_structure.h  generator.cpp  generator.h  generator_config.h  generator_info.h  i_files_provider.h  i_generator.h  logger.h  utils.cpp  utils.h
misc/single_header_generator/generator/: CMakeLists.txt
misc/single_header_generator/generator/src/core/: CMakeLists.txt  file.cpp  file.h  file_factory.cpp  file_factory.h  file_formatter.cpp  file_formatter.h  files_provider.cpp  files_provider.h  fs_adapter.cpp  fs_adapter.h  fs_interactor.cpp  fs_interactor.h  generator.cpp  generator.h  generator_config.h  i_editable_file.h  i_file.h  i_file_factory.h  i_file_formatter.h  i_files_provider.h  i_fs_interactor.h  i_generator.h  utils.cpp  utils.h
misc/single_header_generator/generator/src/core/include/: i_file_formatter.h  i_files_provider.h
misc/single_header_generator/generator/tests/: CMakeLists.txt  test_file.cpp  test_file_formatter.cpp  test_files_provider.cpp  test_fs_adapter.cpp  test_fs_interactor.cpp  test_logger.cpp
misc/single_header_generator/resources/: output.template
misc/single_header_generator/src/: main.cpp
misc/single_header_generator/src/core/: file.h  file_formatter.h  logger.h
misc/single_header_generator/src/core/tests/: CMakeLists.txt  test_file_formatter.cpp  test_utils.cpp
misc/single_header_generator/tests/: CMakeLists.txt  file_unit.cpp  test_file.cpp  test_file_formatter.cpp  test_files_provider.cpp  test_files_structure.cpp  test_generator.cpp  test_generator_config.cpp  test_generator_info.cpp  test_logger.cpp
one_header_generator/: CMakeLists.txt  generator.cpp
single_include/: TreeBinding.h
single_include/creolization/: creolization.h
src/: JSON.h  TreeBinding.h  Xml.h
src/Details/: TreeBinding.cpp  TreeBindingDecl.h  TreeBindingDetails.h
tests/: CMakeLists.txt
tests/src/: test1.cpp  test_common.cpp  test_json.cpp  test_xml.cpp  tests.cpp
